--- a/gobotany/site/templates/partner/home.html
+++ b/gobotany/site/templates/partner/home.html
@@ -3,7 +3,7 @@
 
 {# Home page template for a sample partner site, overriding Go Botany #}
 
-{% block title %}Partner: sample Go Botany partner site{% endblock %}
+{% block title %}Partner Site Sample: Go Botany{% endblock %}
 {% block title_suffix %}{% endblock %}
 
 {% comment %}
