--- a/gobotany/site/templates/partner/_header.html
+++ b/gobotany/site/templates/partner/_header.html
@@ -4,6 +4,8 @@
         <div class="container">
             {% if page = "home" %}
                 <h1>Partner Site Sample: Go Botany</h1>
+                <p class="partner"><b>Partner Site Sample</b>
+                    <i>brief partner site tagline here</i></p>
             {% else %}
                 <p class="go-botany">{% nav_item 'Go Botany: Discover thousands of New England plants' site-home %}</p>
                 <p class="partner"><b>{% nav_item 'Partner Site Sample' site-home %}</b>
