Disable search on partner sites.
So far, search is only offered globally for the main Go Botany site. (#396)

--- a/gobotany/site/templates/partner/_header.html
+++ b/gobotany/site/templates/partner/_header.html
@@ -18,6 +18,7 @@
                 <ul>
                     {% include "partner/_primary_navigation.html" %}
                 </ul>
+                {% comment %}
                 <div id="search">
                     <form id="search-suggest" action="/search/" autocomplete="off">
                         <input type="text" name="q" placeholder="Search..."
@@ -28,6 +29,7 @@
                         </div>
                     </form>
                 </div>
+                {% endcomment %}
             </nav>
         </div>
     </header>
