Show the site name in the bottom navigation on small screens.
This is to help indicate which site the user is on from the footer
area, especially for the case of partner sites. (#396)

--- a/gobotany/site/templates/partner/_footer.html
+++ b/gobotany/site/templates/partner/_footer.html
@@ -13,8 +13,8 @@
                     180 Hemenway Road, Framingham, MA 01701</p>
                 </div>
                 <div class="navigation">
-                    <h6>Partner (based on
-                        Go Botany [{% gobotany_version %}])</h6>
+                    <h6>Partner Site Sample
+                        (Go Botany [{% gobotany_version %}])</h6>
                     <ul id="footer-nav" class="sections">
                         {% include "partner/_primary_navigation.html" %}
                     </ul>
