--- a/gobotany/static/sass/_site-media-queries.scss
+++ b/gobotany/static/sass/_site-media-queries.scss
@@ -231,11 +231,11 @@ $search-suggest-menu-top: 83px;
         }
         .publisher {
             margin: 14px 0 0;
-            padding: 12px $smallscreen-margin 20px;
+            padding: 12px $smallscreen-margin 10px;
         }
         .navigation {
             h6:first-child {
-                display: none;
+                padding: $smallscreen-margin 0 $smallscreen-margin 14px;
             }
             > ul.sections {
                 li {
