Clarify some CSS names for partner sites. (#396)

--- a/gobotany/site/templates/partner/_header.html
+++ b/gobotany/site/templates/partner/_header.html
@@ -4,11 +4,11 @@
         <div class="container">
             {% if page = "home" %}
                 <h1>Partner Site Sample: Go Botany</h1>
-                <p class="partner"><b>Partner Site Sample</b>
+                <p class="site-name"><b>Partner Site Sample</b>
                     <i>brief partner site tagline here</i></p>
             {% else %}
                 <p class="go-botany">{% nav_item 'Go Botany: Discover thousands of New England plants' site-home %}</p>
-                <p class="partner"><b>{% nav_item 'Partner Site Sample' site-home %}</b>
+                <p class="site-name"><b>{% nav_item 'Partner Site Sample' site-home %}</b>
                     <i>brief partner site tagline here</i></p>
             {% endif %}
             <p class="newfs"><a href="http://www.newenglandwild.org/">New
