--- a/gobotany/static/sass/_partnersites.scss
+++ b/gobotany/static/sass/_partnersites.scss
@@ -8,7 +8,7 @@
         h1 {
             width: 260px;
         }
-        .partner {
+        .site-name {
             float: none;
             font-size: 22px;
             left: 178px;
@@ -34,7 +34,7 @@ header.partner-site {
     .go-botany, .go-botany a {
         width: 170px;
     }
-    .partner {
+    .site-name {
         color: $link-green;
         float: left;
         font-family: $headings-font;
@@ -77,7 +77,7 @@ header.partner-site {
                 margin-left: 0;
                 width: 200px;
             }
-            .partner {
+            .site-name {
                 font-size: 14px;
                 left: 43px;
                 top: 36px;
@@ -89,7 +89,7 @@ header.partner-site {
         .container {
             position: relative;
         }
-        .partner {
+        .site-name {
             float: none;
             font-size: 12px;
             left: 66px;
