--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -1141,7 +1141,7 @@ body.teaching #main li {
 @import "search";
 @import "help";
 @import "popups";
-@import "partner";
+@import "partnersites";
 
 /* Finally, include global media queries for smartphones and tablets. These
  * should be last. */
