--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -728,13 +728,13 @@ body.skey {
                 }
             } /* end .choice */
             
-            a.close {
+            .close {
                 background: url(/static/images/icons/close.png) no-repeat transparent;
                 display: block;
-                float: left;
+                float: right;
                 height: 16px;
                 margin: 5px 0 0 0;
-                padding: 12px 12px 0 0;
+                padding: 12px 0 0 0;
                 width: 16px;
             }
             h4 {
@@ -1608,6 +1608,12 @@ ul.get-more-questions-menu {
                     .clear-filter {
                         width: 50%;
                     }
+                } /* end .option-list */
+            } /* end #question-nav */
+            .working-area {
+                .close {
+                    float: left;
+                    padding-right: 12px;
                 }
             }
             .species-count-heading {
