Include the glossary terms in the small-screen Level 3 page. (#308)

--- a/gobotany/simplekey/templates/partner/results.html
+++ b/gobotany/simplekey/templates/partner/results.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block body_attributes %}class="skey results {{ key|title|lower }}
-    mobile-wide {{ request.GET.m }}"{% endblock %}
+    mobile-wide mobile-gloss {{ request.GET.m }}"{% endblock %}
 
 {% block main_content %}
     {% include "gobotany/_results_modal_dialogs.html" %}
