Remove Info from Flora section from partner site species page. (#400)

--- a/gobotany/taxa/templates/partner/species.html
+++ b/gobotany/taxa/templates/partner/species.html
@@ -304,6 +304,8 @@
             </div>
         </div>
 
+        {% comment %}
         {% include "gobotany/_info_from_flora.html" %}
+        {% endcomment %}
 
 {% endblock %}
