Only link a lookalike if the species exists in the partner site. (#401)

--- a/gobotany/taxa/templates/partner/species.html
+++ b/gobotany/taxa/templates/partner/species.html
@@ -1,6 +1,7 @@
 {% extends "partner/_page_no_sidebar.html" %}
 {% load dkey_filters %}
 {% load simplekey_extras %}
+{% load taxa_tags %}
 
 {% block title %}{{ scientific_name }} 
 ({% for common_name in common_names %}{% if not forloop.first %}, {% endif %}{{ common_name }}{% endfor %}){% endblock %}
@@ -257,7 +258,7 @@
                 <h4>Sometimes Confused With</h4>
                 <dl>
                 {% for lookalike in lookalikes %}
-                    <dt><a href="/species/{{ lookalike.lookalike_scientific_name|lower|replace:' ,/' }}/"><em>{{ lookalike.lookalike_scientific_name }}</em></a>{% if lookalike.lookalike_characteristic %}:{% endif %}</dt>
+                    <dt>{% lookalike_item lookalike.lookalike_scientific_name %}{% if lookalike.lookalike_characteristic %}:{% endif %}</dt>
                     <dd>{{ lookalike.lookalike_characteristic }}</dd>
                 {% endfor %}
                 </dl>
