--- a/gobotany/taxa/templates/partner/species.html
+++ b/gobotany/taxa/templates/partner/species.html
@@ -293,7 +293,7 @@
 
             {% if taxon.variety_notes %}
             <div class="section">
-                <h4>Notes on Subspecies and Varieties</h4>
+                <h4>Notes on Subspecies and Varieties in New England</h4>
                 <p>{{ taxon.variety_notes|italicize_plant|safe }}</p>
             </div>
             {% endif %}
