Update the way species pages handle partner-specific blurbs. (#402)

--- a/gobotany/taxa/templates/gobotany/species.html
+++ b/gobotany/taxa/templates/gobotany/species.html
@@ -126,13 +126,14 @@
             </div>
         </div>
 
-        {% if partner_heading or partner_blurb %}
+        {% comment %}
+        {% if partner_blurb %}
             <div id="partner">
-                <h2>{{ partner_heading }}</h2>
-                <p>{{ partner_blurb }} </p>
+                <h2>{{ partner_heading|default:'At Partner Site' }}</h2>
+                <p>{{ partner_blurb }}</p>
             </div>
         {% endif %}
-
+        {% endcomment %}
         <div id="facts">
             <h2>Facts About</h2>
             <p>
